welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:11: error: identifier expected but '}' found.
	}
        ^